# tympan-apo

./: .gitignore  CLAUDE.md  Cargo.toml  README.ja.md  README.md
.github/ISSUE_TEMPLATE/: handoff.md
.github/scripts/: verify-cdylib.ps1
.github/workflows/: bootstrap-publish.yml  release.yml  tier1.yml  tier2.yml  tier3-asan.yml  tier3.yml
docs/: architecture.md  overview.md  references.md  testing.md
docs/decisions/: 0001-ci-verification-strategy.md  README.md
docs/ja/: architecture.md  overview.md  references.md  testing.md
examples/: aec_scaffold.rs  gain.rs  passthrough.rs
src/: apo.rs  buffer.rs  clsid.rs  error.rs  format.rs  fx_properties.rs  inf.rs  instance.rs  lib.rs  macros.rs
src/aec/: class_factory.rs  exports.rs  instance_com.rs  mod.rs
src/raw/: abi.rs  class_factory.rs  dispatch.rs  exports.rs  instance_com.rs  media_type.rs  mod.rs  reg_properties.rs  register.rs
src/realtime/: context.rs  mod.rs  refcount.rs  ring.rs  state.rs
tests/: realtime_safety.rs  register_apo.rs  tier3_aec_lifecycle.rs  tier3_lifecycle.rs
