[package]
name = "tympan-apo"
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/penta2himajin/tympan-apo"
description = "Rust framework for Windows Audio Processing Objects (APOs)"
readme = "README.md"
keywords = ["audio", "windows", "apo", "com", "realtime"]
categories = ["multimedia::audio", "os::windows-apis"]
publish = false

# Library-only artefact. `register_apo!` emits the four `Dll*`
# entry points from the user APO's crate root (e.g. the
# passthrough example below), so the framework crate itself does
# not need to produce a cdylib. Removing `cdylib` from this list
# avoids rust-lang/cargo#6313: when the framework is built both
# as rlib (for downstream linking) and as cdylib (under
# `--all-targets`), parallel link jobs race to write the same
# `tympan_apo.dll` and hit LNK1104.
[lib]
crate-type = ["rlib"]

# Reference APO compiled as a separate Windows cdylib so Tier 2
# CI can verify the four `Dll*` exports via `dumpbin /exports`.
# `register_apo!` and the framework's COM bridge are
# `cfg(windows)`-gated, so the source is a `#![cfg(windows)]`
# no-op on non-Windows hosts and the cdylib link step never runs
# there.
[[example]]
name = "passthrough"
crate-type = ["cdylib"]

# Second reference APO: applies a fixed linear gain. Demonstrates
# per-instance processing state on top of the passthrough template.
[[example]]
name = "gain"
crate-type = ["cdylib"]

# AEC reference scaffold. Builds only with `--features aec`; the
# source is gated on `cfg(all(windows, feature = "aec"))` so non-
# AEC builds compile it to an empty cdylib.
[[example]]
name = "aec_scaffold"
crate-type = ["cdylib"]
required-features = ["aec"]

[features]
default = []
aec = []

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Apo",
    "Win32_Media_KernelStreaming",
    "Win32_UI_Shell_PropertiesSystem",
]

[target.'cfg(windows)'.dependencies.windows-core]
version = "0.62"

[dependencies]
crossbeam-utils = { version = "0.8", default-features = false }

[dev-dependencies]
static_assertions = "1.1"
# Global-allocator wrapper that aborts inside an
# `assert_no_alloc(|| { ... })` span when an allocation traverses
# the hook. Wired up in `tests/realtime_safety.rs` to enforce
# CLAUDE.md prohibition #1.
#
# `default-features = false` switches off the `disable_release`
# feature so `AllocDisabler` stays defined when the release-profile
# test binary is compiled (Tier 1's `cargo build --release
# --all-targets` step compiles every test target as release,
# regardless of whether the test itself is run in debug or release).
assert_no_alloc = { version = "1.1", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.dev]
panic = "abort"
